test/src/e2e_vm_tests/test_programs/should_fail/self_impl_contract_invalid_const_invalid_type/src/main.sw
contract;

impl Contract {
    const CONST_INVALID_TYPE: u64 = "not a u64";
}
